Add electrolyzer
I might change how this one works to be similar to the canner. Not sure yet.